# library-system-project

./: .env  .gitignore  CMakeLists.txt  README.md  README_UTILITIES.md  TODO_IDEAS.md  main.cpp
app/: CMakeLists.txt  main.cpp
documentation/: EnvVarFetcher.md  Logger.md  ThreadPool.md
modules/Api/: CMakeLists.txt
modules/Api/Presentation/: CMakeLists.txt
modules/Api/Presentation/include/: Dispatcher.hpp
modules/Api/Presentation/unittests/: CMakeLists.txt  DispatcherTests.cpp
modules/Application/: CMakeLists.txt
modules/Application/include/: LibraryService.hpp
modules/Application/unittests/: CMakeLists.txt  LibraryServiceTests.cpp
modules/Book/: CMakeLists.txt
modules/Book/Application/: CMakeLists.txt
modules/Book/Application/include/: AddBookCommand.hpp  BookFiltersCreator.hpp  IBookFiltersCreator.hpp  LibraryService.hpp  RemoveBookCommand.hpp
modules/Book/Application/src/: LibraryService.cpp
modules/Book/Application/unittests/: CMakeLists.txt  LibraryServiceTests.cpp
modules/Book/Domain/: CMakeLists.txt
modules/Book/Domain/include/: Book.hpp  BookFilters.hpp  FilterResults.hpp  IBookRepository.hpp
modules/Book/Domain/src/: BookFilters.cpp  FilterResults.cpp
modules/Book/Domain/unittests/: BookDomainTests.cpp  CMakeLists.txt
modules/Book/Infrastructure/: CMakeLists.txt
modules/Book/Infrastructure/Persistence/InMemory/include/: InMemoryBookRepository.hpp  MultiIndexedContainer.hpp
modules/Book/Infrastructure/Persistence/InMemory/src/: InMemoryBookRepository.cpp
modules/Book/Infrastructure/QueryAdapters/include/: BookFilteringForMultiIndexedContainer.hpp
modules/Book/Infrastructure/QueryAdapters/src/: BookFilteringForMultiIndexedContainer.cpp
modules/Book/Infrastructure/unittests/: BookFilteringForMultiIndexedContainerTests.cpp  CMakeLists.txt  InMemoryBookRepositoryTests.cpp  MultiIndexContainerTests.cpp
modules/Book/Presentation/: CMakeLists.txt
modules/Book/Presentation/include/: BookJsonParser.hpp
modules/Book/Presentation/src/: BookJsonParser.cpp
modules/Book/Presentation/unittests/: BookJsonParserTests.cpp  CMakeLists.txt
modules/BookShelfModule/: CMakeLists.txt
modules/BookShelfModule/include/: Book.hpp  BookId.hpp
modules/BookShelfModule/src/: BookId.cpp
modules/BookShelfModule/unittests/: BookShelfTests.cpp  CMakeLists.txt
modules/DataModule/: CMakeLists.txt
modules/DataModule/unittests/: CMakeLists.txt  DataTests.cpp
modules/Domain/: CMakeLists.txt
modules/Domain/include/: Book.hpp  BookId.hpp
modules/Domain/unittests/: BookTests.cpp  CMakeLists.txt
modules/ExampleModule/: CMakeLists.txt
modules/ExampleModule/include/: Example.hpp
modules/ExampleModule/src/: Example.cpp
modules/ExampleModule/unittests/: CMakeLists.txt  ExampleTests.cpp
modules/Repository/: CMakeLists.txt
modules/Repository/include/: BookFilteringForMIC.hpp  BookFilters.hpp  BookFiltersCreator.hpp  BookRepository.hpp  FilterMultiIndexedContainer.hpp  FilterMultiIndexedContainerCreator.hpp  IBookFilteringForMIC.hpp  IBookFiltersCreator.hpp  IBookRepository.hpp  IDataContainer.hpp  IDataContainerFilter.hpp  MultiIndexedContainer.hpp
modules/Repository/src/: BookFilteringForMIC.cpp  BookFiltersCreator.cpp  BookRepository.cpp  FilterMultiIndexedContainer.cpp  MultiIndexedContainer.cpp
modules/Repository/unittests/: BookRepositoryTests.cpp  CMakeLists.txt  MultiIndexContainerTests.cpp
modules/TestUtils/: CMakeLists.txt
modules/TestUtils/include/: BookBuilderHelper.hpp
modules/TestUtils/mocks/: MockIBookRepository.hpp
modules/Utilities/: CMakeLists.txt
modules/Utilities/EnvVarFetcher/: CMakeLists.txt
modules/Utilities/EnvVarFetcher/include/: AppConfig.hpp  EnvVarFetcher.hpp
modules/Utilities/EnvVarFetcher/unittests/: CMakeLists.txt  EnvVarFetcherTests.cpp
modules/Utilities/Logger/: CMakeLists.txt
modules/Utilities/Logger/include/: ConsoleLogSink.hpp  FileLogSink.hpp  ILogSink.hpp  ILogger.hpp  LogSinkHelpers.hpp  Logger.hpp  LoggerHelpers.hpp
modules/Utilities/Logger/unittests/: CMakeLists.txt  LogSinkTests.cpp  LoggerTests.cpp
modules/Utilities/Logger/unittests/mocks/: MockILogSink.hpp  MockILogger.hpp
modules/Utilities/ThreadPool/: CMakeLists.txt
modules/Utilities/ThreadPool/include/: IThreadPool.hpp  ThreadPool.hpp
modules/Utilities/ThreadPool/unittests/: CMakeLists.txt  ThreadPoolTests.cpp
modules/Utilities/UuidGenerator/: CMakeLists.txt
modules/Utilities/UuidGenerator/include/: IUuidGenerator.hpp  UuidGenerator.hpp
modules/Utilities/UuidGenerator/unittests/: CMakeLists.txt  UuidGeneratorTests.cpp
modules/Utilities/UuidGenerator/unittests/mocks/: MockIUuidGenerator.hpp
modules/Utilities/include/: ExampleUtility.hpp
modules/Utilities/unittests/: CMakeLists.txt  UuidGeneratorTests.cpp
modules/UtilitiesModule/: CMakeLists.txt
modules/UtilitiesModule/src/: ExampleUtility.cpp
modules/UtilitiesModule/unittests/: CMakeLists.txt
product/include/: Data.hpp
product/src/: Data.cpp
release/: CMakeLists.txt
